--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,17 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+.tooltip {
+  position: absolute;
+  width: 150px;
+  height: 90px;
+  padding: 2px;
+  padding-top: 8px;
+  font: 12px sans-serif;
+  color: white;
+  text-align: center;
+  background: blue;
+  border: 0;
+  border-radius: 10px;
+}
