--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
   font: 12px sans-serif;
   color: white;
   text-align: center;
-  background: blue;
+  background: grey;
   border: 0;
   border-radius: 10px;
 }
